--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -887,6 +887,11 @@ h2 {
     height: 40px;
   }
 }
+@media only screen and (max-width: 38em) {
+  .about__skillImg {
+    height: 30px;
+  }
+}
 @media only screen and (max-width: 64em) {
   .about__desc {
     margin-bottom: 4.8rem;
